@@ -1297,17 +1297,35 @@ class PlgSystemDebug extends JPlugin
 
 		if ($dbVersion5037)
 		{
-			// Run a SHOW PROFILE query:
-			$db->setQuery('SHOW PROFILES'); //SHOW PROFILE ALL FOR QUERY ' . (int) ($k+1));
-			$this->sqlShowProfiles = $db->loadAssocList();
-
-			if ($this->sqlShowProfiles)
+			try
 			{
-				foreach ($this->sqlShowProfiles as $qn)
+				// Check if profiling is enabled:
+				$db->setQuery("SHOW VARIABLES LIKE 'have_profiling'");
+				$hasProfiling = $db->loadResult();
+
+				if ($hasProfiling)
 				{
-					$db->setQuery('SHOW PROFILE FOR QUERY ' . (int) ($qn['Query_ID']));
-					$this->sqlShowProfileEach[(int) ($qn['Query_ID'] - 1)] = $db->loadAssocList();
+					// Run a SHOW PROFILE query:
+					$db->setQuery('SHOW PROFILES');
+					$this->sqlShowProfiles = $db->loadAssocList();
+
+					if ($this->sqlShowProfiles)
+					{
+						foreach ($this->sqlShowProfiles as $qn)
+						{
+							// Run SHOW PROFILE FOR QUERY for each query where a profile is available (max 100):
+							$db->setQuery('SHOW PROFILE FOR QUERY ' . (int) ($qn['Query_ID']));
+							$this->sqlShowProfileEach[(int) ($qn['Query_ID'] - 1)] = $db->loadAssocList();
+						}
+					}
 				}
+				else
+				{
+					$this->sqlShowProfileEach[0] = array(array('Error' => 'MySql have_profiling = off'));
+				}
+			}
+			catch (Exception $e) {
+				$this->sqlShowProfileEach[0] = array(array('Error' => $e->getMessage()));
 			}
 		}
 
